Refactoring and invalid input fixed